--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <script src="./index.js"></script>
     <script src="./menu.js"></script>
  <script src="./mobile-menu.js"></script>
-    <script src="./readmore-prog.js"></script>
+    <!-- <script src="./readmore-prog.js"></script> -->
     <script src="./readMore.js"></script>
   </body>
 </html>
