--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,6 +18,8 @@
 </head>
 
 <body>
+
+    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/menu.html"></include>
     <main>
@@ -28,11 +31,12 @@
     </main>
     <include src="./partials/footer.html"></include>
   
+    
+    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
-
-    <script src="./js/menu.js"></script>
-    <script src="./js/mobile-menu.js"></script>
-    <script src="./js/readmore-prog.js"></script>
-    <script src="./js/readMore.js"></script>
+    <script src="./menu.js"></script>
+ <script src="./mobile-menu.js"></script>
+    <!-- <script src="./readmore-prog.js"></script> -->
+    <script src="./readMore.js"></script>
   </body>
 </html>
